--- a/src/assets/custom.scss
+++ b/src/assets/custom.scss
@@ -1,4 +1,8 @@
 @charset "utf-8";
 // If need, change your variables before importing Bulma
 //$title-color: #ff0000;
+
+$footer-background-color: #ffffff;
+$navbar-height: 4rem;
+
 @import "~bulma/bulma.sass";
